--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,9 @@ jobs:
         with:
           path: ${{ env.GOPATH }}/src/github.com/${{ github.repository }}
       - name: install OS dependencies
-        run: sudo apt-get install libgtk-3-dev gettext libglib2.0-dev libc6-dev-i386 xvfb
+        run: |
+          sudo apt-get update
+          sudo apt-get install libgtk-3-dev gettext libglib2.0-dev libc6-dev-i386 xvfb
       - uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go }}
