--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -1,6 +1,6 @@
 name: Repository updates
 
-on: [check_run, check_suite, create, delete, deployment, deployment_status, fork, gollum, issue_comment, issues, label, milestone, page_build, project, project_card, project_column, public, pull_request, pull_request_review, pull_request_review_comment, pull_request_target, push, registry_package, release, watch]
+on: [check_run, check_suite, create, delete, deployment, deployment_status, fork, gollum, issue_comment, issues, label, milestone, page_build, project, project_card, project_column, public, push, registry_package, release, watch]
     
 jobs:
   notify:
